# core-diploma

./: Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
entrypoints/: start.sh
src/app/: config.py  container.py
src/app/application/: exceptions.py
src/app/application/entities/: __init__.py  attachment.py  comment.py  link.py  status.py  task.py  viewer.py
src/app/application/interfaces/repositories/rdbms/: attachment.py  comment.py  link.py  status.py  task.py
src/app/application/interfaces/unit_of_work/: rdbms_uow.py
src/app/application/use_cases/: shared.py
src/app/application/use_cases/mentor_intern_links/: service.py
src/app/application/use_cases/task_attachments/: service.py
src/app/application/use_cases/task_comments/: service.py
src/app/application/use_cases/task_links/: service.py
src/app/application/use_cases/task_statuses/: service.py
src/app/application/use_cases/tasks/: service.py
src/app/infra/alembic/: env.py
src/app/infra/alembic/versions/: 20260321_0001_initial_task_board.py
src/app/infra/connection_engines/sqla/: db.py
src/app/infra/jwt/: jwt_service.py
src/app/infra/repositories/sqla/: mentor_intern_link.py  task.py  task_attachment.py  task_comment.py  task_link.py  task_status.py
src/app/infra/unit_of_work/: sqla.py
src/app/presentation/rest/: main.py
src/app/presentation/rest/dependencies/: auth.py
src/app/presentation/rest/exception_handlers/: exception_handlers.py
src/tests/: conftest.py
src/tests/unit/: test_shared_services.py  test_task_service.py  test_task_status_service.py
(+14 files in other folders)
