[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["flesm <ostrovskijan659@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.135.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
