[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["flesm <ostrovskijan659@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.135.1"}
sqlalchemy = "^2.0.41"
alembic = "^1.16.1"
python-dotenv = "^1.1.0"
asyncpg = "^0.30.0"
python-jose = "^3.5.0"
pydantic-settings = "^2.9.1"
dependency-injector = "^4.48.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-asyncio = "^1.0.0"
pytest-cov = "^6.2.1"


[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
